# sb-foo

./: .gitignore  Makefile
.github/workflows/: x-sb-foo-copy.yaml  x-sb-foo-main.yaml
sb_foo_client/: CHANGELOG.md  Dockerfile  __init__.py  _version.py  main.py  pyproject.toml
sb_foo_client/tests/: test_this.py
sb_foo_client/things/: stuff.py
sb_foo_indexer/: CHANGELOG.md  Dockerfile  __init__.py  _version.py  main.py  pyproject.toml
sb_foo_indexer/tests/: test_this.py
